Edited login, register display by Phat, added column of Post table, added list school display

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "typeahead": "^0.2.2",
+        "vue-star-rating": "^1.6.1"
     }
 }
